# hitboxtests

./: CMakeLists.txt  README.md  fragmentshader.glsl  vertexshader.glsl
lib/glad/: glad.h
src/: glad.c  main.c
src/gfx/camera/: camera.c  camera.h
src/gfx/shader/: shader.c  shader.h
src/gfx/texture/: texture.c  texture.h
src/gfx/utils/: EBO.c  EBO.h  VAO.c  VAO.h  VBO.c  VBO.h  types.h
src/gfx/window/: window.c  window.h
